<resources>
    <string name="app_name">JJ Drawer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>

    <string name="photos">Photos</string>
    <string name="home">Home</string>
    <string name="videos">Videos</string>
    <string name="files">Docs</string>
    <string name="subheader">Subheader</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="aboutus">About Us</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
